--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "stream-chat": "^9.24.0",
     "stream-chat-react": "^13.9.0",
+    "svix": "^1.78.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
