Fix chat app: useEffect dependencies, apostrophes, and prepare for Vercel deploy

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "stream-chat": "^9.24.0",
-    "stream-chat-react": "^13.9.0",
+    "stream-chat-react": "^13.13.0",
     "svix": "^1.78.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
